React Router, Help page, and FontAwesome handling.  Added Lightbox functionality.   Ready for build/deployment.

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     Chroma Gallery - keyboard lighting profiles from /r/ChromaProfiles
   </title>
 </head>
+<script data-search-pseudo-elements src="https://kit.fontawesome.com/ddca20bf1d.js" crossorigin="anonymous"></script>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
